--- a/DBSynchronization.vcxproj.filters
+++ b/DBSynchronization.vcxproj.filters
@@ -47,7 +47,7 @@
     <ClCompile Include="..\Library\UtilCore\DB\DBQueryProcess.cpp">
       <Filter>UtilCore\DB</Filter>
     </ClCompile>
-    <ClCompile Include="..\Library\UtilCore\DB\DBSynchronizer.cpp">
+    <ClCompile Include="..\Library\UtilCore\DB\DBSchema.cpp">
       <Filter>UtilCore\DB</Filter>
     </ClCompile>
     <ClCompile Include="..\Library\UtilCore\Util\CommonUtil.cpp">
@@ -93,6 +93,9 @@
     <ClCompile Include="..\Library\UtilCore\JSON\RapidJSONUtil.cpp">
       <Filter>UtilCore\JSON</Filter>
     </ClCompile>
+    <ClCompile Include="DBSchemaToExcel.cpp" />
+    <ClCompile Include="DBSchemaToXML.cpp" />
+    <ClCompile Include="DBSchemaToSync.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Library\UtilCore\BaseDefine.h">
@@ -153,7 +156,7 @@
     <ClInclude Include="..\Library\UtilCore\DB\DBSyncBind.h">
       <Filter>UtilCore\DB</Filter>
     </ClInclude>
-    <ClInclude Include="..\Library\UtilCore\DB\DBSynchronizer.h">
+    <ClInclude Include="..\Library\UtilCore\DB\DBSchema.h">
       <Filter>UtilCore\DB</Filter>
     </ClInclude>
     <ClInclude Include="..\Library\UtilCore\Util\CommonUtil.h">
@@ -208,6 +211,9 @@
     <ClInclude Include="..\Library\UtilCore\JSON\RapidJSONUtil.h">
       <Filter>UtilCore\JSON</Filter>
     </ClInclude>
+    <ClInclude Include="DBSchemaToExcel.h" />
+    <ClInclude Include="DBSchemaToXML.h" />
+    <ClInclude Include="DBSchemaToSync.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Library\UtilCore\DB\BaseODBC.inl">
